# textrank-cloud-service2

./: .gitignore  README.md  docker-compose.yaml  vscode_workspace.code-workspace
cloud-worker/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_docker.txt  scripts.py
cloud-worker/cloud_worker/: __init__.py  constants.py  main.py
cloud-worker/cloud_worker/imagerank_module/: image_transcribe.py
cloud-worker/cloud_worker/services/: connection_handlers.py  task_processer.py
cloud-worker/cloud_worker/textrank_module/: clustering.py  nlp.py  pagerank.py  pagerank_wt.py  textrank.py
cloud-worker/tests/: test_pagerank.py  test_textrank.py
fastapi-server/: Dockerfile  pyproject.toml  requirements.txt  scripts.py
fastapi-server/fastapi_server/: constants.py  main.py
fastapi-server/fastapi_server/entities/: POST_bodies.py  responses.py
fastapi-server/fastapi_server/routers/: router.py
fastapi-server/fastapi_server/services/: connection_handlers.py  imagerank_service.py  task_processor.py  textrank_service.py  worker_service.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  settings.js
frontend/src/components/: NetworkGraph.js
frontend/src/pages/: homepage.css  homepage.js
frontend/src/services/: api.js
kubes_manifest/: cloud_autoscale.yaml  cloud_worker_deployment.yaml
load_testing/: requirements.txt
load_testing/load_testing/: locustfile.py
postman/: CZ4052- Text Rank Server Environment.postman_environment.json  CZ4052- Text Rank Server Requests.postman_collection.json
