[tool.poetry]
name = "cloud-worker"
version = "0.1.0"
description = ""
authors = ["Zhu Weiji <zhuweiji1997@gmail.com>"]
readme = "README.md"
packages = [{include = "cloud_worker"}]

[tool.poetry.scripts]
start               = "scripts:start"
test                = "scripts:test"
tests               = "scripts:test"
healthcheck         = "scripts:healthcheck"
add_precommit_hooks = "scripts:add_pre_commit_hooks"

[tool.poetry.dependencies]
python = "^3.10"
certifi = "2022.12.7"
charset-normalizer = "3.1.0"
filelock = "3.10.6"
idna = "3.4"
Jinja2 = "3.1.2"
MarkupSafe = "2.1.2"
mpmath = "1.3.0"
networkx = "3.0"
numpy = "1.24.2"
Pillow = "9.4.0"
requests = "2.28.2"
sympy = "1.11.1"
torch = "2.0.0+cu117"
torchvision = "0.15.1+cu117"
typing-extensions = "4.5.0"
urllib3 = "1.26.15"
gensim = "^4.3.1"
aio-pika = "^9.0.5"

[[tool.poetry.source]]
name = "pytorch-repo"
url = "https://download.pytorch.org/whl/cu117"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
