[tool.poetry]
name = "fastapi-server"
version = "0.1.0"
description = ""
authors = ["Zhu Weiji <zhuweiji1997@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.0"}
gensim = "^4.3.1"
pika = "^1.3.1"
aio-pika = "^9.0.5"

[tool.poetry.scripts]
start               = "scripts:start"
test                = "scripts:test"
tests               = "scripts:test"
healthcheck         = "scripts:healthcheck"
add_precommit_hooks = "scripts:add_pre_commit_hooks"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
